# InverseCompositionalKLT

./: .gitignore  CMakeLists.txt  README.md
include/: InverseCompositionalKLT.hpp
src/: InverseCompositionalKLT.cpp
test/: CMakeLists.txt  testEuclideanKLT.cpp
